03-manifests/common/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: traveling-merchant
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "traveling-merchant.com"
      allowedRoutes:
        namespaces:
          from: All
