03-manifests/common/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
  namespace: traveling-merchant
spec:
  parentRefs:
    - name: my-gateway
  hostnames: ["traveling-merchant.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: backend
          namespace: traveling-merchant
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: traveling-merchant
          port: 8080
